<resources>
    <string name="app_name">Ultimate-Sweat-Buddies</string>
    <string name="workout">Workout</string>
    <string name="plans">Plans</string>
    <string name="exercises">Exercises</string>
    <string name="goals">Goals</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="misc">Miscellaneous</string>
    <string name="endurance">Endurance</string>
    <string name="weight">Weight</string>
    <string name="body_weight">Body Weight</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username">Username must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">Signup</string>
    <string name="delete">Delete</string>
    <string name="add_plan">Add Plan</string>
    <string name="edit">Edit</string>
    <string name="enter_plan_title">Enter Plan Title</string>
    <string name="su">Su</string>
    <string name="m">M</string>
    <string name="tu">Tu</string>
    <string name="w">W</string>
    <string name="tr">Th</string>
    <string name="f">F</string>
    <string name="sa">Sa</string>
    <string name="exercises_in_this_plan">Exercises in this plan:</string>
    <string name="exercises_not_in_this_plan">Exercises not in this plan:</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="save_plan">Save Plan</string>
    <string name="title_misc">Add a new Misc Goal!</string>
    <string name="title_end">Add a new Endurance Goal!</string>
    <string name="title_weight">Add a new Weight Goal!</string>
    <string name="body_title">Add a new Body Weight Goal!</string>
    <string name="misc_goal_description">Enter Description</string>
    <string name="misc_goal_deadline">Enter Deadline Date</string>
    <string name="misc_goal_completed">Completed?</string>
    <string name="days_of_week">Days of Week: %1$s</string>
    <string name="select">Select</string>
    <string name="select_a_plan">Select a Plan</string>
    <string name="switch_plan">Switch Plan</string>
    <string name="finish_workout">Finish Workout</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="no_workouts_logged_yet">No Workouts Logged Yet</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
</resources>