<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".ui.plans.AddEditPlanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_plan_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSunday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/su"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbSunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvMonday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/m"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbMonday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTuesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tu"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbTuesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvWednesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/w"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbWednesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvThursday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tr"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbThursday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFriday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/f"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbFriday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSaturday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sa"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbSaturday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvAddedExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/exercises_in_this_plan"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAddedExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tvUnaddedExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/exercises_not_in_this_plan"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUnaddedExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/save_plan"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/save"
        app:elevation="1dp"
        tools:ignore="ImageContrastCheck" />

</RelativeLayout>